mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: racobniasse-dev
  labels:
    role: database
    zone: lan
spec:
  replicas: 1
  selector:
    matchLabels:
      role: database
  template:
    metadata:
      labels:
        role: database
        zone: lan
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: racobniasse-dev
  labels:
    role: database
spec:
  selector:
    role: database
  ports:
  - port: 3306
    targetPort: 3306
  clusterIP: None
